@@ -51,14 +51,19 @@ We can start the shell using [Docker](../docker.md):
 docker run -it --rm -v "`pwd`":/io spark-shell
 ```
 
-We should now ge the following output:
+We should now get the following output:
 
 ```scala
-2021-08-26 09:20:28,815 WARN util.NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/spark/jars/spark-unsafe_2.12-3.1.2.jar) to constructor java.nio.DirectByteBuffer(long,int)
+WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+2021-09-06 08:36:27,947 WARN util.NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable
 Setting default log level to "WARN".
 To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).
-Spark context Web UI available at http://588d3dbe7377:4040
-Spark context available as 'sc' (master = local[*], app id = local-1629969638164).
+Spark context Web UI available at http://a4a64e0fea2c:4040
+Spark context available as 'sc' (master = local[*], app id = local-1630917390997).
 Spark session available as 'spark'.
 Welcome to
       ____              __
@@ -66,10 +71,12 @@ Welcome to
     _\ \/ _ \/ _ `/ __/  '_/
    /___/ .__/\_,_/_/ /_/\_\   version 3.1.2
       /_/
-
-Using Scala version 2.12.10 (OpenJDK 64-Bit Server VM, Java 1.8.0_302)
+         
+Using Scala version 2.12.10 (OpenJDK 64-Bit Server VM, Java 11.0.12)
 Type in expressions to have them evaluated.
 Type :help for more information.
+
+scala> 
 ```
 
 When opening a Spark Shell, by default, you get two objects.
